@@ -1,5 +1,6 @@
 package org.openmetadata.service.resources.apps;
 
+import static org.openmetadata.common.utils.CommonUtil.listOf;
 import static org.openmetadata.common.utils.CommonUtil.nullOrEmpty;
 import static org.openmetadata.schema.type.Include.ALL;
 import static org.openmetadata.service.Entity.ADMIN_USER_NAME;
@@ -118,6 +119,11 @@ public class AppResource extends EntityResource<App, AppRepository> {
           ScheduleType.NoSchedule,
           ScheduleType.OnlyManual);
   private final AppMapper mapper = new AppMapper();
+
+  @Override
+  protected List<MetadataOperation> getEntitySpecificOperations() {
+    return listOf(MetadataOperation.TRIGGER, MetadataOperation.DEPLOY);
+  }
 
   @Override
   public void initialize(OpenMetadataApplicationConfig config) {
@@ -385,6 +391,48 @@ public class AppResource extends EntityResource<App, AppRepository> {
   }
 
   @GET
+  @Path("/name/{name}/live-indexing-queue")
+  @Operation(
+      operationId = "listSearchIndexRetryQueue",
+      summary = "List Search Index Retry Queue",
+      description =
+          "Get the current live indexing retry queue entries for the SearchIndexingApplication.",
+      responses = {
+        @ApiResponse(
+            responseCode = "200",
+            description = "List of retry queue records",
+            content = @Content(mediaType = "application/json"))
+      })
+  public Response listRetryQueue(
+      @Context UriInfo uriInfo,
+      @Context SecurityContext securityContext,
+      @Parameter(description = "Name of the App", schema = @Schema(type = "string"))
+          @PathParam("name")
+          String name,
+      @Parameter(description = "Limit records. (1 to 1000, default = 10)")
+          @DefaultValue("10")
+          @QueryParam("limit")
+          @Min(0)
+          @Max(1000)
+          int limitParam,
+      @Parameter(description = "Offset records. (0 to 1000000, default = 0)")
+          @DefaultValue("0")
+          @QueryParam("offset")
+          @Min(0)
+          int offset) {
+    App app = repository.getByName(uriInfo, name, repository.getFields("id"));
+    if (!"SearchIndexingApplication".equals(app.getName())) {
+      throw new BadRequestException(
+          "Live indexing queue is only available for SearchIndexingApplication");
+    }
+    CollectionDAO.SearchIndexRetryQueueDAO retryQueueDAO =
+        Entity.getCollectionDAO().searchIndexRetryQueueDAO();
+    var records = retryQueueDAO.listAll(limitParam, offset);
+    int total = retryQueueDAO.countAll();
+    return Response.ok(new ResultList<>(records, offset, total)).build();
+  }
+
+  @GET
   @Path("/name/{name}/extension")
   @Operation(
       operationId = "listAppExtension",
@@ -482,9 +530,11 @@ public class AppResource extends EntityResource<App, AppRepository> {
           String after) {
     App installation = repository.getByName(uriInfo, name, repository.getFields("id,pipelines"));
     if (installation.getAppType().equals(AppType.Internal)) {
-      return Response.status(Response.Status.OK)
-          .entity(repository.getLatestAppRuns(installation))
-          .build();
+      AppRunRecord latestRun = repository.getLatestAppRunsOptional(installation).orElse(null);
+      if (latestRun == null) {
+        return Response.status(Response.Status.NO_CONTENT).build();
+      }
+      return Response.status(Response.Status.OK).entity(latestRun).build();
     } else {
       if (!installation.getPipelines().isEmpty()) {
         EntityReference pipelineRef = installation.getPipelines().get(0);
@@ -531,9 +581,11 @@ public class AppResource extends EntityResource<App, AppRepository> {
           String after) {
     App installation = repository.getByName(uriInfo, name, repository.getFields("id,pipelines"));
     if (installation.getAppType().equals(AppType.Internal)) {
-      return Response.status(Response.Status.OK)
-          .entity(repository.getLatestAppRuns(installation))
-          .build();
+      AppRunRecord latestRun = repository.getLatestAppRunsOptional(installation).orElse(null);
+      if (latestRun == null) {
+        return Response.status(Response.Status.NO_CONTENT).build();
+      }
+      return Response.status(Response.Status.OK).entity(latestRun).build();
     } else {
       if (!installation.getPipelines().isEmpty()) {
         EntityReference pipelineRef = installation.getPipelines().get(0);
@@ -1045,6 +1097,9 @@ public class AppResource extends EntityResource<App, AppRepository> {
       @Context SecurityContext securityContext) {
     App app =
         repository.getByName(uriInfo, name, new EntityUtil.Fields(repository.getAllowedFields()));
+    OperationContext operationContext =
+        new OperationContext(entityType, MetadataOperation.EDIT_ALL);
+    authorizer.authorize(securityContext, operationContext, getResourceContextByName(name));
     if (SCHEDULED_TYPES.contains(app.getScheduleType())) {
       ApplicationHandler.getInstance()
           .installApplication(
@@ -1084,6 +1139,9 @@ public class AppResource extends EntityResource<App, AppRepository> {
       @Context SecurityContext securityContext) {
     App app =
         repository.getByName(uriInfo, name, new EntityUtil.Fields(repository.getAllowedFields()));
+    OperationContext operationContext =
+        new OperationContext(entityType, MetadataOperation.EDIT_ALL);
+    authorizer.authorize(securityContext, operationContext, getResourceContextByName(name));
     // The application will have the updated appConfiguration we can use to run the `configure`
     // logic
     ApplicationHandler.getInstance()
@@ -1120,6 +1178,8 @@ public class AppResource extends EntityResource<App, AppRepository> {
           Map<String, Object> configPayload) {
     EntityUtil.Fields fields = getFields(String.format("%s,bot,pipelines", FIELD_OWNERS));
     App app = repository.getByName(uriInfo, name, fields);
+    OperationContext operationContext = new OperationContext(entityType, MetadataOperation.TRIGGER);
+    authorizer.authorize(securityContext, operationContext, getResourceContextByName(name));
     if (Boolean.FALSE.equals(ApplicationHandler.getInstance().isEnabled(name))) {
       throw AppException.byMessage(
           name, "NotEnabled", "App is not enabled. Enable it from the server configuration.");
@@ -1170,9 +1230,13 @@ public class AppResource extends EntityResource<App, AppRepository> {
           String name) {
     EntityUtil.Fields fields = getFields(String.format("%s,bot,pipelines", FIELD_OWNERS));
     App app = repository.getByName(uriInfo, name, fields);
+    OperationContext operationContext = new OperationContext(entityType, MetadataOperation.TRIGGER);
+    authorizer.authorize(securityContext, operationContext, getResourceContextByName(name));
     if (Boolean.TRUE.equals(app.getSupportsInterrupt())) {
       if (app.getAppType().equals(AppType.Internal)) {
-        new Thread(() -> AppScheduler.getInstance().stopApplicationRun(app)).start();
+        Thread.ofVirtual()
+            .name("om-app-stop-" + name)
+            .start(() -> AppScheduler.getInstance().stopApplicationRun(app));
         return Response.status(Response.Status.OK)
             .entity("Application stop in progress. Please check status via.")
             .build();
@@ -1211,6 +1275,8 @@ public class AppResource extends EntityResource<App, AppRepository> {
           String name) {
     EntityUtil.Fields fields = getFields(String.format("%s,bot,pipelines", FIELD_OWNERS));
     App app = repository.getByName(uriInfo, name, fields);
+    OperationContext operationContext = new OperationContext(entityType, MetadataOperation.DEPLOY);
+    authorizer.authorize(securityContext, operationContext, getResourceContextByName(name));
     if (Boolean.FALSE.equals(ApplicationHandler.getInstance().isEnabled(name))) {
       throw AppException.byMessage(
           name, "NotEnabled", "App is not enabled. Enable it from the server configuration.");
