@@ -6,6 +6,7 @@ import com.fasterxml.jackson.databind.JsonNode;
 import java.io.ByteArrayInputStream;
 import java.net.HttpURLConnection;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
 import java.security.cert.CertificateException;
 import java.security.cert.CertificateFactory;
 import java.security.cert.X509Certificate;
@@ -42,12 +43,7 @@ public class SamlValidator {
         return securityValidation;
       }
 
-      FieldError idpValidation = validateIdpConnectivity(samlConfig);
-      if (idpValidation != null) {
-        return idpValidation;
-      }
-
-      return null; // Success - SAML configuration validated
+      return validateIdpConnectivity(samlConfig); // Success - SAML configuration validated
     } catch (Exception e) {
       LOG.error("SAML validation failed", e);
       return ValidationErrorBuilder.createFieldError(
@@ -181,7 +177,9 @@ public class SamlValidator {
       } else if (message.contains("callback")) {
         return ValidationErrorBuilder.createFieldError(
             ValidationErrorBuilder.FieldPaths.SAML_SP_CALLBACK, message);
-      } else if (message.contains("IdP Entity ID")) {
+      } else if (message.contains("IdP Entity ID")
+          || message.contains("Okta Entity ID")
+          || message.contains("tenant ID")) {
         return ValidationErrorBuilder.createFieldError(
             ValidationErrorBuilder.FieldPaths.SAML_IDP_ENTITY_ID, message);
       } else if (message.contains("IdP X509 Certificate")) {
@@ -291,11 +289,10 @@ public class SamlValidator {
       String samlRequest = createTestSamlRequest(samlConfig);
 
       // Build URL with SAML request parameter (HTTP-Redirect binding)
-      StringBuilder urlWithParams = new StringBuilder(ssoUrl);
-      urlWithParams.append(ssoUrl.contains("?") ? "&" : "?");
-      urlWithParams.append("SAMLRequest=").append(samlRequest);
+      String urlWithParams =
+          ssoUrl + (ssoUrl.contains("?") ? "&" : "?") + "SAMLRequest=" + samlRequest;
 
-      URL url = new URL(urlWithParams.toString());
+      URL url = new URL(urlWithParams);
       HttpURLConnection conn = (HttpURLConnection) url.openConnection();
       conn.setRequestMethod("GET");
       conn.setConnectTimeout(5000);
@@ -351,7 +348,7 @@ public class SamlValidator {
       // Create a minimal SAML AuthnRequest XML
       String timestamp =
           java.time.Instant.now().truncatedTo(java.time.temporal.ChronoUnit.SECONDS).toString();
-      String requestId = "_" + java.util.UUID.randomUUID().toString();
+      String requestId = "_" + java.util.UUID.randomUUID();
 
       String samlRequestXml =
           "<?xml version=\"1.0\" encoding=\"UTF-8\"?>"
@@ -381,14 +378,14 @@ public class SamlValidator {
           new java.util.zip.Deflater(java.util.zip.Deflater.DEFLATED, true);
       java.util.zip.DeflaterOutputStream deflaterStream =
           new java.util.zip.DeflaterOutputStream(bytesOut, deflater);
-      deflaterStream.write(samlRequestXml.getBytes("UTF-8"));
+      deflaterStream.write(samlRequestXml.getBytes(StandardCharsets.UTF_8));
       deflaterStream.finish();
 
       // Base64 encode
       String base64Request = Base64.getEncoder().encodeToString(bytesOut.toByteArray());
 
       // URL encode for use in query parameter
-      return java.net.URLEncoder.encode(base64Request, "UTF-8");
+      return java.net.URLEncoder.encode(base64Request, StandardCharsets.UTF_8);
     } catch (Exception e) {
       LOG.warn("Failed to create test SAML request", e);
       // Return a dummy encoded string if we can't create proper request
@@ -406,7 +403,7 @@ public class SamlValidator {
         byte[] buffer = new byte[500];
         int bytesRead = inputStream.read(buffer);
         if (bytesRead > 0) {
-          return new String(buffer, 0, bytesRead, "UTF-8");
+          return new String(buffer, 0, bytesRead, StandardCharsets.UTF_8);
         }
       }
     } catch (Exception e) {
@@ -804,10 +801,7 @@ public class SamlValidator {
             || (idpConfig.getEntityId() != null
                 && idpConfig.getEntityId().contains("sts.windows.net"))) {
 
-          FieldError azureNameIdValidation = validateAzureNameIdFormat(idpConfig, nameId);
-          if (azureNameIdValidation != null) {
-            return azureNameIdValidation;
-          }
+          return validateAzureNameIdFormat(idpConfig, nameId);
         }
         // Add similar validation for other IdPs if needed
       }
@@ -893,21 +887,25 @@ public class SamlValidator {
           String supportedFormats = "";
 
           if (supportsSaml11) {
+            StringBuilder supportedFormatsBuilder = new StringBuilder();
             for (String format : azureSaml11Formats) {
-              supportedFormats += format + ", ";
+              supportedFormatsBuilder.append(format).append(", ");
               if (nameId.equals(format)) {
                 isSupported = true;
               }
             }
+            supportedFormats = supportedFormatsBuilder.toString();
           }
 
           if (supportsSaml20) {
+            StringBuilder supportedFormatsBuilder = new StringBuilder(supportedFormats);
             for (String format : azureSaml20Formats) {
-              supportedFormats += format + ", ";
+              supportedFormatsBuilder.append(format).append(", ");
               if (nameId.equals(format)) {
                 isSupported = true;
               }
             }
+            supportedFormats = supportedFormatsBuilder.toString();
           }
 
           // Azure AD most commonly uses SAML 1.1 emailAddress
@@ -930,7 +928,7 @@ public class SamlValidator {
           }
 
         } else {
-          LOG.warn("Could not fetch Azure AD metadata: HTTP " + response.getStatusCode());
+          LOG.warn("Could not fetch Azure AD metadata: HTTP {}", response.getStatusCode());
           // Warning case - treat as success
           LOG.warn(
               "Could not verify NameID format against Azure AD metadata: HTTP {}",
